[package]
name = "unbounded-interval-tree"
version = "1.1.1"
authors = ["Jonathan Guillotte-Blouin <jonathan.guillotte.blouin@gmail.com>"]
edition = "2021"
license = "MIT"
description = "An interval tree working with inclusive/exclusive bounds, as well as unbounded intervals. Provides helpers to fetch overlapping intervals, and difference of intervals."
readme = "README.md"

repository = "https://github.com/jonathanGB/unbounded-interval-tree"
keywords = ["interval", "tree", "bound", "exclusive", "difference"]
categories = ["algorithms", "data-structures"]

[dependencies]
rand = "0.8"
serde = { version = "1.0", optional = true , features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
